add testes #39